--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
   "devDependencies": {
     "autoprefixer": "^9.6.1",
     "browser-sync": "^2.26.7",
+    "gulp": "^4.0.2",
     "gulp-less": "^4.0.1",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^8.0.0",
     "gulp-sourcemaps": "^2.6.5"
-  },
+  }
 }
